# PyRoDeEn

./: .gitignore  JAX_Chemistry_Conclusions_and_Future_Work.md  PROJECT_REVAMP_PLAN.md  PYPROJECT_CONVENTIONS_GUIDE.md  README.md  arrhenius.py  cantera_test.py  cfd_grid_demos.py  environment.yml  pyproject.toml  pyproject.toml.example  setup.py
benchmarks/: benchmark_chemistry.py  benchmark_solvers_example.py  benchmark_stiff.py
examples/: cfd_grid_demos.py
matlab_reference/modified/MUSLC_TVD_Genuine2D/: MUSCL_Euler2d.m  MUSCL_EulerRes2d_v0.m  MUSCL_EulerRes2d_v1.m  MUSCL_EulerRes2d_v2.m  benchmark_matlab.m  density.txt  energy.txt  matlab_benchmark_data.mat  matlab_benchmark_results.txt  matlab_sod_results.txt  matlab_sod_solution.mat  parameters.txt  pressure.txt  sod_shock_tube_matlab.m  velocity.txt  x_coords.txt
old_outputs/: python_sod_results.txt
src/MUSCL_TVD_FagioDiFapo/: MUSCL_Euler1d.py  euler_solvers.py
src/MUSCL_TVD_Genuine2D_FagioDiFapo/: MUSCL_Euler2d.py  MUSCL_EulerRes2d_v0.py  MUSCL_EulerRes2d_v1.py  cfd_grid.py  utils.py
src/rde_solver/cfd/: MUSCL_Euler2d.py  MUSCL_Euler_sod2d.py  cli.py.example  euler_solvers.py
src/rde_solver/chemistry/: arrhenius.py
tests/: conftest_example.py
tests/unit/: test_solvers_example.py
